yawg-00499 Update Maven build to erquire Java 25