@@ -25,6 +25,8 @@ Copyright (c) 2015-2026 Yawg project contributors.
     <!-- Versions of dependencies. -->
     <asciidoctorj.version>1.5.4</asciidoctorj.version>
     <asciidoctorj-diagram.version>1.3.1</asciidoctorj-diagram.version>
+    <!-- <asciidoctorj.version>1.6.2</asciidoctorj.version> -->
+    <!-- <asciidoctorj-diagram.version>1.5.18</asciidoctorj-diagram.version> -->
     <assertj-core.version>3.19.0</assertj-core.version>
     <commonmark.version>0.17.0</commonmark.version>
     <commons-cli.version>1.2</commons-cli.version>
@@ -38,28 +40,28 @@ Copyright (c) 2015-2026 Yawg project contributors.
 
     <!-- Versions of Maven plugins. -->
     <findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>
-    <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
-    <maven-assembly-plugin.version>3.7.0</maven-assembly-plugin.version>
-    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
-    <maven-clean-plugin.version>3.3.2</maven-clean-plugin.version>
-    <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
-    <maven-dependency-plugin.version>3.6.1</maven-dependency-plugin.version>
-    <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
-    <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
-    <maven-failsafe-plugin.version>3.2.5</maven-failsafe-plugin.version>
-    <maven-gpg-plugin.version>3.2.0</maven-gpg-plugin.version>
-    <maven-install-plugin.version>3.1.1</maven-install-plugin.version>
-    <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
-    <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
-    <maven-jxr-plugin.version>3.3.2</maven-jxr-plugin.version>
+    <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
+    <maven-assembly-plugin.version>3.8.0</maven-assembly-plugin.version>
+    <maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
+    <maven-clean-plugin.version>3.5.0</maven-clean-plugin.version>
+    <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
+    <maven-dependency-plugin.version>3.9.0</maven-dependency-plugin.version>
+    <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
+    <maven-enforcer-plugin.version>3.6.2</maven-enforcer-plugin.version>
+    <maven-failsafe-plugin.version>3.5.4</maven-failsafe-plugin.version>
+    <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
+    <maven-install-plugin.version>3.1.4</maven-install-plugin.version>
+    <maven-jar-plugin.version>3.5.0</maven-jar-plugin.version>
+    <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
+    <maven-jxr-plugin.version>3.6.0</maven-jxr-plugin.version>
     <maven-pmd-plugin.version>3.14.0</maven-pmd-plugin.version>
-    <maven-project-info-reports-plugin.version>3.1.1</maven-project-info-reports-plugin.version>
-    <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
-    <maven-site-plugin.version>4.0.0-M13</maven-site-plugin.version>
-    <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
-    <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>3.2.5</maven-surefire-report-plugin.version>
-    <versions-maven-plugin.version>2.16.2</versions-maven-plugin.version>
+    <maven-project-info-reports-plugin.version>3.9.0</maven-project-info-reports-plugin.version>
+    <maven-resources-plugin.version>3.4.0</maven-resources-plugin.version>
+    <maven-site-plugin.version>3.21.0</maven-site-plugin.version>
+    <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
+    <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
+    <maven-surefire-report-plugin.version>3.5.4</maven-surefire-report-plugin.version>
+    <versions-maven-plugin.version>2.21.0</versions-maven-plugin.version>
 
   </properties>
 
@@ -73,7 +75,6 @@ Copyright (c) 2015-2026 Yawg project contributors.
     <module>testutils</module>
   </modules>
 
-  <!-- -->
   <build>
 
     <defaultGoal>package</defaultGoal>
@@ -84,28 +85,34 @@ Copyright (c) 2015-2026 Yawg project contributors.
 
       <plugins>
 
-        <!-- -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
           <version>${maven-clean-plugin.version}</version>
         </plugin>
 
-
-        <!-- Compiler configuration. -->
+        <!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven-compiler-plugin.version}</version>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <source>25</source>
+            <target>25</target>
             <showWarnings>true</showWarnings>
             <compilerArgs>
               <arg>-Xlint</arg>
               <arg>-Xlint:-serial</arg>
               <arg>-Xlint:-processing</arg>
+	      <arg>-Xlint:-dangling-doc-comments</arg>
             </compilerArgs>
+	    <annotationProcessorPaths>
+	      <path>
+		<groupId>org.inferred</groupId>
+		<artifactId>freebuilder</artifactId>
+		<version>${freebuilder.version}</version>
+	      </path>
+	    </annotationProcessorPaths>
           </configuration>
         </plugin>
 
@@ -115,7 +122,6 @@ Copyright (c) 2015-2026 Yawg project contributors.
           <version>${maven-install-plugin.version}</version>
         </plugin>
 
-        <!-- -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
@@ -201,8 +207,7 @@ Copyright (c) 2015-2026 Yawg project contributors.
       </plugin>
 
       <!--
-          See https://maven.apache.org/enforcer/maven-enforcer-plugin/
-          for documentation.
+          https://maven.apache.org/enforcer/maven-enforcer-plugin/
       -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -216,6 +221,9 @@ Copyright (c) 2015-2026 Yawg project contributors.
             </goals>
             <configuration>
               <rules>
+		<requireJavaVersion>
+		  <version>25</version>
+		</requireJavaVersion>
                 <requireMavenVersion>
                   <version>3.9</version>
                 </requireMavenVersion>
@@ -250,7 +258,6 @@ Copyright (c) 2015-2026 Yawg project contributors.
           <!-- Some tests expect config parameters in the form of Java
                system properties. -->
           <systemPropertyVariables>
-
             <!-- Required by com.varmateo.testutils.TestUtils -->
             <TestUtils.inputTestFilesDir>${basedir}/src/test/resources</TestUtils.inputTestFilesDir>
 
@@ -259,8 +266,49 @@ Copyright (c) 2015-2026 Yawg project contributors.
 
             <!-- Logging configuration for tests. -->
             <java.util.logging.config.file>${yawg.projectRootDir}/testutils/src/main/resources/logging.properties</java.util.logging.config.file>
-
           </systemPropertyVariables>
+
+	  <!-- Java 11 -->
+	  <!-- <argLine> -->
+	  <!--   -\-add-opens=java.base/java.io=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.lang=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.lang.reflect=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.net=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.util=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.util.regex=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/javax.crypto=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/sun.nio.ch=ALL-UNNAMED -->
+	  <!-- </argLine> -->
+
+	  <!-- Java 17 -->
+	  <!-- <argLine> -->
+	  <!--   -\-add-opens=java.base/java.lang=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.lang.reflect=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.net=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.util=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.util.regex=ALL-UNNAMED -->
+	  <!-- </argLine> -->
+
+	  <!-- Java 21 -->
+	  <!-- <argLine> -->
+	  <!--   -\-enable-native-access=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.lang=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.lang.reflect=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.net=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.util=ALL-UNNAMED -->
+	  <!--   -\-add-opens=java.base/java.util.regex=ALL-UNNAMED -->
+	  <!-- </argLine> -->
+
+	  <!-- Java 25 -->
+	  <argLine>
+	    --sun-misc-unsafe-memory-access=allow
+	    --enable-native-access=ALL-UNNAMED
+	    --add-opens=java.base/java.lang=ALL-UNNAMED
+	    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+	    --add-opens=java.base/java.net=ALL-UNNAMED
+	    --add-opens=java.base/java.util=ALL-UNNAMED
+	    --add-opens=java.base/java.util.regex=ALL-UNNAMED
+	  </argLine>
 
         </configuration>
       </plugin>
@@ -531,19 +579,18 @@ Copyright (c) 2015-2026 Yawg project contributors.
       </plugin>
 
       <!--
-         See http://www.mojohaus.org/findbugs-maven-plugin/ for
-         documentation.
+         http://www.mojohaus.org/findbugs-maven-plugin/
       -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
-        <version>${findbugs-maven-plugin.version}</version>
-        <configuration>
-          <effort>Max</effort>
-          <xmlOutput>true</xmlOutput>
-          <xmlOutputDirectory>target/site</xmlOutputDirectory>
-        </configuration>
-      </plugin>
+      <!-- <plugin> -->
+      <!--   <groupId>org.codehaus.mojo</groupId> -->
+      <!--   <artifactId>findbugs-maven-plugin</artifactId> -->
+      <!--   <version>${findbugs-maven-plugin.version}</version> -->
+      <!--   <configuration> -->
+      <!--     <effort>Max</effort> -->
+      <!--     <xmlOutput>true</xmlOutput> -->
+      <!--     <xmlOutputDirectory>target/site</xmlOutputDirectory> -->
+      <!--   </configuration> -->
+      <!-- </plugin> -->
 
       <!--
          See http://maven.apache.org/plugins/maven-pmd-plugin/ for
@@ -569,8 +616,6 @@ Copyright (c) 2015-2026 Yawg project contributors.
     </plugins>
 
   </reporting>
-
-
 
   <!-- More project information. -->
 
